# rattle-iros-2022

./: .gitignore  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md
acado_nmpc/: CMakeLists.txt  README.md  package.xml
acado_nmpc/NMPC_export/: acado_common.h  acado_integrator.c  acado_solver.c
acado_nmpc/launch/: nmpc_acado_rattle.launch
acado_nmpc/src/: nmpc_acado_rattle.cpp
astrobee/: CMakeLists.txt  package.xml
astrobee/config_reader/: CMakeLists.txt
astrobee/ff_common/: CMakeLists.txt
astrobee/ff_util/: CMakeLists.txt
astrobee/launch/: astrobee.launch  sim.launch  sim_rattle.launch
astrobee/launch/controller/: rviz.launch
astrobee/launch/robot/: MLP.launch
astrobee/msg_conversions/: CMakeLists.txt
astrobee/resources/: logging.config
astrobee/resources/rviz/: granite.rviz  granite_rattle.rviz  iss.rviz  iss_rattle.rviz  reswarm.rviz
casadi_nmpc/: CMakeLists.txt  README.md  package.xml
casadi_nmpc/casadi-export/: CMakeLists.txt  casadi_robust_tube_mpc.c  casadi_robust_tube_mpc.h  mpc_func_casadi.casadi  tube_mpc_func_casadi.casadi
casadi_nmpc/casadi-matlab/: README.md  calc_mRPI_ROS.m  calc_mRPI_python.m  casadi_3dof_double_integrator_mpc.m  casadi_3dof_double_integrator_tube_mpc.m  casadi_ellipsoidal_tube_mpc.m  create_and_add_ros_msgs.m  generate_casadi_functions.m  generate_casadi_libraries.m  get_gains.m  get_noise.m  load_python_z_poly_calc.m  run_dynamics.m  run_simulation.m  run_simulation_ISS_TS1.m  z_poly_calc.m
casadi_nmpc/casadi-matlab/old/: create_ref_traj.m  get_dynamics_for_dt.m  prepare_tube_mpc.m  readme.md  robust_tube_mpc.m  tube_mpc_caller.m  tube_mpc_main.m
casadi_nmpc/casadi-python/: RobustMPC.py
casadi_nmpc/include/casadi_nmpc/: casadi_nmpc.h  pd_attitude_controller.h
casadi_nmpc/include/dlr_utils/: dlr_utils.h
casadi_nmpc/launch/: casadi_nmpc.launch
casadi_nmpc/scripts/: bong_wie_gain_check.m
casadi_nmpc/src/: casadi_nmpc_core.cc  casadi_nmpc_nodelet.cc  casadi_nmpc_ros.cc  casadi_nmpc_utils.cc  pd_attitude_controller.cc
casadi_nmpc/tests/: CMakeLists.txt  casadi_nmpc_test.cc
coordinator/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
coordinator/include/coordinator/: coordinator.tpp  primary_dmpc_methods.hpp  primary_nodelet.h  primary_ooa_methods.hpp  primary_rattle_methods.hpp  secondary_dmpc_methods.hpp  secondary_nodelet.h
coordinator/include/traj_utils/: traj_utils.h
coordinator/launch/: primary_coordinator.launch
coordinator/src/: primary_nodelet.cc  secondary_nodelet.cc
execute_asap/: CMakeLists.txt  README.md  package.xml
execute_asap/config/: casadi_nmpc_params.yaml  primary_coord_params.yaml  rattle_coordinator_params.yaml  secondary_coord_params.yaml  uc_bound_params.yaml
execute_asap/launch/: README.md  asap_astrobee.launch  asap_primary.launch  asap_primary_LLP.launch  asap_primary_MLP.launch  asap_secondary.launch  asap_secondary_LLP.launch  asap_secondary_MLP.launch
execute_asap/scripts/: asap_config.py  asap_helper.py  asap_primary.py  asap_secondary.py  execute_asap.py  pub_gds_topics.py  pub_rattle_status.py  pub_reswarm_status.py  pub_reswarm_status_secondary.py
info_rich_traj/: CMakeLists.txt  README.md  package.xml
info_rich_traj/launch/: info_rich_traj.launch
info_rich_traj/scripts/: info_rich_traj_gen.py
inv_fam/: CMakeLists.txt  README.md  package.xml
inv_fam/launch/: inv_fam.launch
inv_fam/msg/: ForwardFAM.msg  InverseFAM.msg
inv_fam/scripts/: FAM_constants.py  inverse_FAM_implementation.py
param_est/: CMakeLists.txt  README.md  package.xml
param_est/launch/: param_est.launch
param_est/msg/: Params.msg
param_est/scripts/: faster_autograd.py  param_est_config.py  param_estimate.py  paramest_estimation_utils.py  paramest_propagation_utils.py
planner_lqrrrt/: CMakeLists.txt  nodelet_plugins.xml  package.xml
planner_lqrrrt/launch/: planner_lqrrrt.launch
planner_lqrrrt/scripts/: plot_lqrrrt_trajsmooth.m  traj_smoother.py
rattle_acado_planner/: CMakeLists.txt  README.md  package.xml
rattle_acado_planner/acado-export/RHP_6DOF_export/: RHP_6DOF.mexa64  acado_common.h  test.cpp
rattle_acado_planner/acado-export/RHP_export/: acado_common.h  my_sim.cpp  test_data_acadodata_M12.txt  test_data_acadodata_M7.txt
rattle_acado_planner/acado-matlab/: README.md  acado_export_test.m  nmpc_test_loop.m  planner_test.m  planner_test_benchmark.m  plot_info_content.m  plot_inputs.m  visualize.m  visualize_planner.m
rattle_acado_planner/acado-matlab/ACADO_generator/: README.md
rattle_acado_planner/acado-matlab/NMPC_export/: acado_NMPC_6DoF.mexa64  acado_integrator.c  acado_solver.c  test.cpp
rattle_acado_planner/acado-matlab/RHP_6DOF_export/: RHP_6DOF.mexa64  acado_integrator.c  acado_qpoases_interface.hpp  acado_solver.c  test.cpp
rattle_acado_planner/launch/: rattle_acado_planner.launch
rattle_acado_planner/msg/: NMPCInstruct.msg
rattle_acado_planner/src/: rattle_acado_planner.cpp  rattle_acado_planner_node.cpp  test_acado.cpp
rattle_coordinator/: CMakeLists.txt  README.md  package.xml
rattle_coordinator/launch/: debug.launch  rattle_coordinator.launch
rattle_coordinator/msg/: TestInstruct.msg
rattle_coordinator/scripts/: run_rattle.py
rattle_coordinator/src/: rattle_coordinator_node.py
rattle_coordinator/tests/: test_rattle_coordinator.py
rattle_rrt/: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
rattle_rrt/bullet3/: CMakeLists.txt
rattle_rrt/bullet3/src/: CMakeLists.txt
rattle_rrt/launch/: rrt.launch
rattle_rrt/msg/: RRTParams.msg  TwistArray.msg  WrenchArray.msg  ellipsoid.msg  ellipsoidArray.msg
rattle_rrt/scripts/: README.md  rrt_plotter.py
rattle_rrt/src/: bullet_collision_checker.cpp  quaternion.cpp  rattle_rrt_nodelet.cpp  rigidBodyDynamics.cpp  state_space_13d.cpp  state_space_2d.cpp  state_space_4d.cpp  state_space_6d_ground.cpp  state_space_6d_iss.cpp
rattle_rrt/test/: test_bullet.cpp  test_rrt.cpp
z_poly_calc/: CMakeLists.txt  README.md  package.xml
z_poly_calc/scripts/: service_call_tester.py
z_poly_calc/src/: z_poly_calc.py
(+555 files in other folders)
