<?xml version="1.0"?>
<package format="2">
  <name>astrobee</name>
  <version>0.0.0</version>
  <description>
    A stand-in version of Astrobee's dependencies.
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>