<?xml version="1.0"?>
<package format="2">
  <name>casadi_nmpc</name>
  <version>0.0.0</version>
  <description>
    A translational robust model predictive controller.
  </description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>actionlib</depend>
  <depend>tf</depend>
  <depend>ff_msgs</depend>
  <depend>ff_util</depend>
  <depend>ff_hw_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ff_common</depend>
  <depend>msg_conversions</depend>
  <depend>rattle_msgs</depend>
  <depend>param_est</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
