<package format="2">
  <name>info_rich_traj</name>
  <version>1.0.0</version>
  <description>Planner that maximizes Fisher information</description>

  <maintainer email="dell@todo.todo">maintainer</maintainer>
  <license>TODO</license>


 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>rospy</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>message_generation</build_depend>


 <exec_depend>rospy</exec_depend>
 <exec_depend>std_msgs</exec_depend>
 <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
