<package format="2">
  <name>param_est</name>
  <version>1.0.0</version>
  <description>Sequential inertia estimator using EKF</description>

  <maintainer email="dell@todo.todo">maintainer</maintainer>
  <license>TODO</license>

 <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
