<?xml version="1.0"?>
<package format="2">
  <name>param_est</name>
  <version>1.0.0</version>
  <description>Sequential inertia estimator using an EKF</description>
  <license>
    Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>ff_msgs</depend>
  <depend>ff_hw_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
</package>
