<?xml version="1.0"?>
<package format="2">
  <name>planner_lqrrrt</name>
  <version>0.0.0</version>
  <description>The planner_lqrrrt package</description>


  <maintainer email="bdoerr@mit.edu">bdoerr</maintainer>



  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>



  <export>
  <nodelet plugin="${prefix}/nodelet_plugins.xml" />

  </export>
</package>
